--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-// GitHub-> Settings-> DeveloperSettings-> Tokens
+// GitHub-> Settings-> DeveloperSettings-> PersonalAccessTokens-> Tokens
 VITE_GITHUB_TOKEN = 'TOKEN'
 
 //YourUsername
 VITE_GITHUB_USERNAME = 'avariceJS' 
+
+
